--- a/Templates/base.html
+++ b/Templates/base.html
@@ -15,7 +15,7 @@
 </script>
 <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
          async defer></script>
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="/style.css">
 	<title>Patlagina</title>
 <style type="text/css">
 	#map {
