--- a/Templates/login.html
+++ b/Templates/login.html
@@ -2,7 +2,7 @@
 
 {% block body_block %}
 
-<center><h1>Login</h1></center>
+<center><h1>Login</h1>
 	<form action="account.html" method="post">
 		<div class="form-row">
 			<label for="email-input">Email:</label>
@@ -16,6 +16,7 @@
 		<button type="submit">Submit</button>
 		<a href="register.html">SignUp</a>
 	</form>
+</center>
 
 
 {% endblock %}
