Search feature added

--- a/Templates/base.html
+++ b/Templates/base.html
@@ -57,7 +57,7 @@
 		<ul class="nav navbar-nav navbar-right">
 		<li>
 				<div class=" form-inline", style="padding-top: 20px">
-					<form action="#">
+					<form action="/meds/">
 						<div class="form-group input-group-lg">
 							<input type="text" class="form-control " placeholder="Denumirea medicamentului/bolii" style="width:500px">
 						</div>
