--- a/Templates/meds.html
+++ b/Templates/meds.html
@@ -1,66 +1,22 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  <title>Medicamente</title>
-</head>
-<body>
-<nav class="navbar navbar-inverse" >
-<div class="container-fluid">
-  <div class="collapse navbar-collapse">
-    <ul class="nav navbar-nav" >
-      <a href="index.html"><img src="http://3.bp.blogspot.com/-9cWGQfxXzJA/VhVB9HfD8AI/AAAAAAAACi0/0pGoT-jTmaQ/s1600/plantain.png" width="120" align="left"></a>
-      <li><a href="med.html"><h3>Medicamente</h3></a></li>
-      <li><a href="#"><h3>Boli</h3></a></li>
-      <li><a href="#"><h3>Farmacii</h3></a></li>
-      <li><a href="#"><h3>Blog</h3></a></li>
-      <li><a href="#"><h3>Contacte</h3></a></li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-      <li><a href="#"><h3>Sign Up</h3></a></li>
-      <li><a href="#"><h3>Login</h3></a></li>
-    </ul>
-  </div>
-</div>  
-</nav>
-<div class="form-inline" align="center" >
-  <form action="#">
-  <div class="form-group input-group-lg">
-    <input type="text" class="form-control" placeholder="Denumirea medicamentului" style="width: 700px">
-  </div>
-  <div class="form-group">
-    <button type="button" class="btn btn-success btn-lg">
-      <span class="glyphicon glyphicon-search" aria-hidden="true"></span>Caută</button>
-  </div>
-  </form>
-</div>
-</br>
-<center><div class="gangam">
-<dl>
-  <dt>A</dt>
-  <dd><a href="http://www.csid.ro/medicamente/aciclovir-capsule-200-mg-400-mg-11270700/">ACICLOVIR, capsule, 200 mg, 400</dd></a>
-  <dd><a href="http://www.csid.ro/medicamente/acid-acetilsalicilic-comprimate-500-mg-11273529/">ACID ACETILSALICILIC</dd></a>
-  <dt>B</dt>
-  <dd><a href="http://www.csid.ro/medicamente/baneocin-pulbere-cutanata-11655707/">Baneocin pulbere cutanata</dd></a>
-  <dd>Baneocin, unguent</dd>
-  <dt>C</dt>
-  <dd>Calciu D3 Plus, 500 mg/400 UI</dd>
-  <dt>D</dt>
-  <dd>Dalalag</dd>
-  <dt>E</dt>
-  <dd>Eragab</dd>
-  <dt>F</dt>
-  <dd>Felcatin</dd>
-  <dt>G</dt>
-  <dd>Guevara</dd>
-</dl>
-</div>
-</center>
+{% extends  'base.html' %}
 
+{% block body_block %}
 
-</body>
-</html>
+  {% for med in medicamente %}
+ <div class="row">
+  <div class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      {% load thumbnail %}
+      <img src="{{med.image.avatar.url}}"
+      <div class="caption">
+        <h3>{{med.name}}</h3>
+        <p>{{med.short_description}}</p>
+        <p><a href="#" class="btn btn-primary" role="button">Citeste mai mult</a></p>
+      </div>
+    </div>
+  </div>
+</div>
+
+  {% endfor %}
+
+{% endblock %}
