--- a/Templates/signup.html
+++ b/Templates/signup.html
@@ -2,44 +2,76 @@
 {% extends 'base.html' %}
 
 {% block body_block %}
-<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<center><h1>Register</h1></center>
-	<form action="account.html" method="post">
-		<div class="form-row">
-			<label for="email-input">Email:</label>
-			<input type="text" name="email" id="email-input"/>
+	<div style="width: 600px; margin: 10px auto 0;">
+	<center><h1>Inregistrare</h1>
+    <br/>
+	<form action="/" method="post">
+        {% csrf_token %}
+        <div class="form-group">
+            <label for={{form.username.id_for_label}} >Nume de utilizator:</label>
+            {{ form.username }}
+        </div>
+		<div class="form-group">
+			<label for={{form.email.id_for_label}} >Email:</label>
+            {{ form.email }}
 		</div>
-		<br/>
-		<div class="form-row">
-			<label for="password-input">Password:</label>
-			<input type="password" name="password" id="password-input"/>
+        <div class="form-group">
+            <label for={{form.first_name.id_for_label}} >Prenumele:</label>
+            {{ form.first_name }}
+        </div>
+        <div class="form-group">
+            <label for={{form.last_name.id_for_label}} >Numele:</label>
+            {{ form.last_name }}
+        </div>
+		<div class="form-group">
+			<label for={{form.password.id_for_label}}>Parolă:</label>
+		  {{ form.password }}
 		</div>
-		<div class="form-row">
-			<label for="confirm-password-input">Confirm Password:</label>
-			<input type="password" name="password" id="confirm-password-input"/>
+		<div class="form-group">
+			<label for={{form.confirm_password.id_for_label}}>Confirmă Parola:</label>
+		  {{ form.confirm_password}}
 		</div>
-		<div class="form-row">
-			<label for="town">Town:</label>
-			<select id="town">
-				<option>Select town</option>
-				<option value="K">Chisinau</option>
-				<option value="CS">Causeni</option>
-				<option value="SV">Stefan-Voda</option>
-				<option value="AN">Anenii Noi</option>
-				<option value="OC">Ocnita</option>
-			</select>
-		</div>
-		<div class="form-row">
+	<form class="form-inline">
+	<label for="country">Țară:</label>
+		<div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Alege țara <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#">Republica Moldova</a></li>
+            <li><a href="#">România</a></li>
+            <li><a href="#">Ukraina</a></li>
+            <li><a href="#">Cehia</a></li>
+        </ul>
+    </div>
+	<label for="town">Localitate:</label>
+		<div class="btn-group">
+        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Alege localitatea <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu">
+            <li><a href="#">Stefan-Voda</a></li>
+            <li><a href="#">Causeni</a></li>
+            <li><a href="#">Anenii Noi</a></li>
+            <li><a href="#">Chisinau</a></li>
+        </ul>
+    </div>
+
+	</form>	
+	<form class="form-inline">
+	<label for="sex">Sex:</label>
+		<div class="checkbox">
 			<label><input type="radio" name="sex" value="F">F</label>
 			<label><input type="radio" name="sex" value="M">M</label>
 		</div>
-		<div class="form-row">
-			<label><input type="checkbox"/>I have read and agree with the <b>Terms and Conditions</b> of this website.</label>
+	</form>
+		<div class="checkbox">
+			<label><input type="checkbox"/>Am citit și sunt de acord cu <a href="#">Condițiile de utilizare </a>  a web site-ului.</label>
 		</div>
-		<button type="submit">Submit</button>
-		<a href="login.html">Log in</a>
-	<form>
+		<button type="submit" class="btn btn-primary">Trimite</button>
+		<a href="#">Log in</a>
+		</div>
+		</center>
+
 
 {% endblock %}
